--- a/ArrowFunc/index.html
+++ b/ArrowFunc/index.html
@@ -13,6 +13,10 @@
       This is a simple HTML page that demonstrates how to use JavaScript
       functions.
     </p>
+
+    <button id="a">ONE</button>
+    <button id="b">TWO</button>
+    <button id="c">THREE</button>
   </body>
   <script src="app.js"></script>
 </html>
