--- a/jeop/index.html
+++ b/jeop/index.html
@@ -7,6 +7,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,6 +16,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="app.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abel&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
     <title>Jeopardy</title>
     <link
       href="https://fonts.googleapis.com/css?family=Copse&display=swap"
@@ -38,17 +43,63 @@
       </button>
     </div>
 
-    <div id="spinner" style="display: none">
-      <i class="fa-solid fa-spinner"></i>
-    </div>
+<div class="table-responsive"> 
+    <table class="table align-middle jeopardy-board p-3 m-2 d-flex">
+      <div  id="board" class="row">
+        <div class="col-6">
 
-    <table id="jeopardy">
-      <thead>
-        <!-- Categories will be appended here -->
-      </thead>
-      <tbody>
-        <!-- Questions will be appended here -->
-      </tbody>
+       
+        <!-- <tr>
+          <th>Category 1</th>
+          <th>Category 2</th>
+          <th>Category 3</th>
+          <th>Category 4</th>
+          <th>Category 5</th>
+          <th>Category 6</th>
+        </tr>
+        <tr>
+          <td>$200</td>
+          <td>$200</td>
+          <td>$200</td>
+          <td>$200</td>
+          <td>$200</td>
+          <td>$200</td>
+        </tr>
+        <tr>
+          <td>$400</td>
+          <td>$400</td>
+          <td>$400</td>
+          <td>$400</td>
+          <td>$400</td>
+          <td>$400</td>
+        </tr>
+        <tr>
+          <td>$600</td>
+          <td>$600</td>
+          <td>$600</td>
+          <td>$600</td>
+          <td>$600</td>
+          <td>$600</td>
+        </tr>
+        <tr>
+          <td>$800</td>
+          <td>$800</td>
+          <td>$800</td>
+          <td>$800</td>
+          <td>$800</td>
+          <td>$800</td>
+        </tr>
+        <tr>
+          <td>$1000</td>
+          <td>$1000</td>
+          <td>$1000</td>
+          <td>$1000</td>
+          <td>$1000</td>
+          <td>$1000</td>
+        </tr> -->
+      </div>
+    </div>
+  </div>
     </table>
 
     <script
