--- a/jeop/index.html
+++ b/jeop/index.html
@@ -8,12 +8,23 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="app.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Reddit+Mono:wght@200..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Jeopardy</title>
     <link
       href="https://fonts.googleapis.com/css?family=Copse&display=swap"
@@ -38,18 +49,27 @@
       </button>
     </div>
 
-    <div id="spinner" style="display: none">
-      <i class="fa-solid fa-spinner"></i>
+    <div class="row">
+      <div
+        class="col-12 d-flex justify-content-center align-items-center"
+        style="height: 15vh"
+      >
+        <div
+          id="spinner"
+          class="spinner-border text-primary"
+          style="width: 3rem; height: 3rem"
+          role="status"
+        >
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
     </div>
 
-    <table id="jeopardy">
-      <thead>
-        <!-- Categories will be appended here -->
-      </thead>
-      <tbody>
-        <!-- Questions will be appended here -->
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <div id="board" class="row">
+        <div class="col-6 table-fixed-size"></div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
