--- a/hacker-snooze/index.html
+++ b/hacker-snooze/index.html
@@ -81,10 +81,14 @@
       <ol id="all-stories-list" class="stories-list"></ol>
 
       <!--      LIST OF FAVORITE STORIES-->
-      <ol id="favorited-stories" class="stories-list" style="display: none;"></ol>
+      <ol
+        id="favorited-stories"
+        class="stories-list"
+        style="display: none"
+      ></ol>
 
       <!--      LIST OF MY STORIES-->
-      <ol id="my-stories" class="stories-list" style="display: none;"></ol>
+      <ol id="my-stories" class="stories-list" style="display: none"></ol>
     </section>
 
     <!-- Login and signup forms -->
@@ -142,7 +146,11 @@
     </section>
 
     <!--    USER PROFILE-->
-    <section id="user-profile" style="display: none;">
+    <section
+      id="user-profile"
+      class="stories-container container"
+      style="display: none"
+    >
       <div class="user-profile-box container">
         <h4>User Profile Info</h4>
         <section>
